Fixing issue with horizontal scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,8 +7,12 @@
     --button-background-hover: #316276;
     --yellow-color: #EFD372;
 }
+html {
+    overflow-x: hidden;
+}
 body {
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 * {
     box-sizing: border-box;
